@@ -3,7 +3,8 @@ English Dolibarr ChangeLog
 --------------------------------------------------------------
 
 ***** ChangeLog for 3.3 compared to 3.2 *****
-
+For users:
+- New: Add supplier ref on supplier orders
 
 
 ***** ChangeLog for 3.2 compared to 3.1 *****
